tests/kyverno-policies/service-types/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: paas
    labels:
      osc.edu/role: paas
